put as much mangling as possible in the js file

--- a/sharepoint-idea/index.html
+++ b/sharepoint-idea/index.html
@@ -1,19 +1,7 @@
 <!doctype html>
-<html lang="en">
-<title>Sharepoint-friendly Wiki Template</title>
-<style>
-
-body {
-    background: #000;
-    color: #888;
-    width: 40rem;
-    margin: auto;
-}
-
-</style>
+<script src="./wikify.js"></script>
 <pre>
-
-# markdown title
+# Introduction
 
 ## subtitle
 
@@ -25,8 +13,4 @@ etc etc
 a regular paragraph
 
 > "a quote"
-
 </pre>
-<script src="./marked.min.js"></script>
-<script src="./wikify.js"></script>
-</html>
